# red4j

./: .gitmodules  build.gradle  settings.gradle
api/: build.gradle
api/src/main/java/cn/afternode/red4j/api/: RED4J.java  RED4JApi.java
api/src/main/java/cn/afternode/red4j/api/plugin/: InvalidPluginException.java  Plugin.java  PluginContainer.java  PluginDefinitionFile.java  PluginManager.java  PluginState.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/launcher/: CMakeLists.txt
src/launcher/src/: main.cpp  main.h  utils.cpp  utils.h
src/main/java/cn/afternode/red4j/: ApiImpl.java  Heck.java  PluginManagerImpl.java  RED4J.java
src/main/java/cn/afternode/red4j/util/: ClasspathAppender.java
src/main/resources/: log4j2.xml
test-plugin/: build.gradle
test-plugin/src/main/java/cn/afternode/red4j/test/: TestPlugin.java
test-plugin/src/main/resources/: red4j.plugin.json
